--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@
 }
 .container{
     position: relative;
-    height: 647px;
+    height: 650px;
     /* background-color: gray; */
-    padding-top: 20px;
+    /* padding-top: 20px; */
 }
 .mbl, .part2{
 
     width:375px ;
-    height: 630px;
+    height: 650px;
     margin: 0px auto;
    
     /* height: 642.22px; */
